测试next获取数据

--- a/next-youtube/package.json
+++ b/next-youtube/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "fuse": "^0.4.0",
     "moment": "^2.29.1",
     "next": "12.1.0",
